--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -11,9 +11,17 @@ add_cppinterop_unittest(CppInterOpTests
   EnumReflectionTest.cpp
   )
 
+if (USE_CLING)
+  set(cling_clang_interp "clingInterpreter")
+endif()
+if (USE_REPL)
+  set(cling_clang_interp "clangInterpreter")
+endif()
+
+
 target_link_libraries(CppInterOpTests
   PRIVATE
-  clingInterpreter
+  ${cling_clang_interp}
   clangCppInterOp
   clangAST
   clangBasic
