--- a/unittests/InterOp/CMakeLists.txt
+++ b/unittests/InterOp/CMakeLists.txt
@@ -11,9 +11,17 @@ add_interop_unittest(InterOpTests
   EnumReflectionTest.cpp
   )
 
+if (USE_CLING)
+  set(cling_clang_interp "clingInterpreter")
+endif()
+if (USE_REPL)
+  set(cling_clang_interp "clangInterpreter")
+endif()
+
+
 target_link_libraries(InterOpTests
   PRIVATE
-  clingInterpreter
+  ${cling_clang_interp}
   clangInterOp
   clangAST
   clangBasic
