Teach InterOp::CreateInterpreter to take arguments.
This patch drops the unused resource-dir parameter and improves the
implementation of GetScope allowing it to return more found declarations such as
function declarations.

--- a/unittests/InterOp/CMakeLists.txt
+++ b/unittests/InterOp/CMakeLists.txt
@@ -3,12 +3,13 @@ set(LLVM_LINK_COMPONENTS
   )
 
 add_interop_unittest(InterOpTests
-  Utils.cpp
-  ScopeReflectionTest.cpp
-  FunctionReflectionTest.cpp
-  VariableReflectionTest.cpp
-  TypeReflectionTest.cpp
   EnumReflectionTest.cpp
+  FunctionReflectionTest.cpp
+  InterpreterTest.cpp
+  ScopeReflectionTest.cpp
+  TypeReflectionTest.cpp
+  Utils.cpp
+  VariableReflectionTest.cpp
   )
 
 if (USE_CLING)
