--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -3,12 +3,13 @@ set(LLVM_LINK_COMPONENTS
   )
 
 add_cppinterop_unittest(CppInterOpTests
-  Utils.cpp
-  ScopeReflectionTest.cpp
-  FunctionReflectionTest.cpp
-  VariableReflectionTest.cpp
-  TypeReflectionTest.cpp
   EnumReflectionTest.cpp
+  FunctionReflectionTest.cpp
+  InterpreterTest.cpp
+  ScopeReflectionTest.cpp
+  TypeReflectionTest.cpp
+  Utils.cpp
+  VariableReflectionTest.cpp
   )
 
 if (USE_CLING)
