Adopt the API of Clang 16 while keeping backward compatibility with 13.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,8 +172,15 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
   message(STATUS "Found supported version: Clang ${CLANG_PACKAGE_VERSION}")
   message(STATUS "Using ClangConfig.cmake in: ${Clang_DIR}")
 
-  ## Clang 13 test
-  if (CLANG_VERSION_MAJOR GREATER_EQUAL 13)
+  ## Clang 13 require c++14 or later, Clang 16 require c++17 or later.
+  if (CLANG_VERSION_MAJOR GREATER_EQUAL 16)
+    if (NOT CMAKE_CXX_STANDARD)
+      set (CMAKE_CXX_STANDARD 17)
+    endif()
+    if (CMAKE_CXX_STANDARD LESS 17)
+      message(fatal "LLVM/InterOp requires c++17 or later")
+    endif()
+  elseif (CLANG_VERSION_MAJOR GREATER_EQUAL 13)
     if (NOT CMAKE_CXX_STANDARD)
       set (CMAKE_CXX_STANDARD 14)
     endif()
