--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,7 +98,7 @@ jobs:
           ${{ matrix.cling=='On' && 'cling' || '' }}
         #key: ...-.x-patch-${{ hashFiles('patches/llvm/*') }}
         #key: ${{ env.CLING_HASH }}-${{ env.LLVM_HASH }}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x
-        key: ${{ env.CLING_HASH }}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x
+        key: ${{ env.CLING_HASH }}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x-patch-${{ hashFiles(format('patches/llvm/clang{0}-*.patch', matrix.clang-runtime)) || 'none' }}
     - name: Build LLVM/Cling on Linux if the cache is invalid
       if: ${{ runner.os == 'Linux' && steps.cache.outputs.cache-hit != 'true' }}
       run: |
@@ -110,6 +110,10 @@ jobs:
            git clone --depth=1 -b release/${{ matrix.clang-runtime }}.x https://github.com/llvm/llvm-project.git
         fi
         cd llvm-project
+        # Apply patches
+        echo "Apply clang${{ matrix.clang-runtime }}-*.patch patches:"
+        [ -f ../patches/llvm/clang${{ matrix.clang-runtime }}-*.patch ] && ls -1 ../patches/llvm/clang${{ matrix.clang-runtime }}-*.patch && git apply ../patches/llvm/clang${{ matrix.clang-runtime }}-*.patch
+        # Build
         mkdir build
         cd build
         if [[ "${cling_on^^}" == "ON" ]]; then
