[cmake] Add missing dependencies.

--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -1,3 +1,7 @@
+set(LLVM_LINK_COMPONENTS
+  Support
+)
+
 set(DLM
   DynamicLibraryManager.cpp
   DynamicLibraryManagerSymbol.cpp
@@ -15,6 +19,19 @@ add_llvm_library(clangInterOp OBJECT
   InterOp.cpp
   ${DLM}
  )
+
+if (USE_CLING)
+  set(cling_clang_interp clingInterpreter)
+endif()
+if (USE_REPL)
+  set(cling_clang_interp clangInterpreter)
+endif()
+
+target_link_libraries(clangInterOp PRIVATE
+  ${cling_clang_interp}
+  clangAST
+  clangBasic
+)
 
 set_source_files_properties(InterOp.cpp
   PROPERTIES COMPILE_DEFINITIONS "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\"")
