--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,19 @@ jobs:
             compiler: gcc-9
             clang-runtime: '16'
             cling: Off
+            cppyy: Off
           - name: ubu22-gcc9-clang13-cling
             os: ubuntu-22.04
             compiler: gcc-9
             clang-runtime: '13'
             cling: On
+            cppyy: Off
+          - name: ubu22-gcc9-clang13-cling-cppyy
+            os: ubuntu-22.04
+            compiler: gcc-9
+            clang-runtime: '13'
+            cling: On
+            cppyy: On
     steps:
     - uses: actions/checkout@v3
       with:
@@ -55,7 +63,6 @@ jobs:
         export LLVM_HASH=$(git ls-remote https://github.com/root-project/llvm-project.git cling-llvm${{ matrix.clang-runtime}} | tr '\t' '-')
         echo "CLING_HASH=$CLING_HASH" >> $GITHUB_ENV
         echo "LLVM_HASH=$LLVM_HASH" >> $GITHUB_ENV
-
     - uses: nelonoel/branch-name@v1.0.1
     - name: Setup compiler on Linux
       if: runner.os == 'Linux'
@@ -63,7 +70,7 @@ jobs:
         # https://www.gnu.org/software/bash/manual/html_node/Shell-Parameter-Expansion.html
         vers="${compiler#*-}"
         os_codename="`cat /etc/os-release | grep UBUNTU_CODENAME | cut -d = -f 2`"
-        sudo apt update
+        ##sudo apt update
         if [[ "${{ matrix.compiler }}" == *"gcc"* ]]; then
           sudo apt install -y gcc-${vers} g++-${vers} lld
           echo "CC=gcc-${vers}" >> $GITHUB_ENV
@@ -84,8 +91,8 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         # Install deps
-        sudo apt-get update
-        sudo apt-get install git g++ debhelper devscripts gnupg python3
+        ##sudo apt update
+        sudo apt install git g++ debhelper devscripts gnupg python3 valgrind
         conda install -y -q -c conda-forge \
           distro \
           pytest
@@ -107,7 +114,7 @@ jobs:
           git clone --depth=1 https://github.com/root-project/cling.git
           git clone --depth=1 -b cling-llvm${{ matrix.clang-runtime }} https://github.com/root-project/llvm-project.git
         else # repl
-           git clone --depth=1 -b release/${{ matrix.clang-runtime }}.x https://github.com/llvm/llvm-project.git
+          git clone --depth=1 -b release/${{ matrix.clang-runtime }}.x https://github.com/llvm/llvm-project.git
         fi
         cd llvm-project
         # Apply patches
@@ -155,12 +162,25 @@ jobs:
           llvm-project
           ${{ matrix.cling=='On' && 'cling' || '' }}
         key: ${{ steps.cache.outputs.cache-primary-key }}
-    - name: Build and Test CppInterOp
+    - name: Build and Test/Install CppInterOp
       run: |
+        LLVM_DIR="$(realpath llvm-project)"
         LLVM_BUILD_DIR="$(realpath llvm-project/build)"
+        cling_on="${{ matrix.cling }}"
+        if [[ "${cling_on^^}" == "ON" ]]; then
+          CLING_DIR="$(realpath cling)"
+          CLING_BUILD_DIR="$(realpath cling/build)"
+          CPLUS_INCLUDE_PATH="${CLING_DIR}/tools/cling/include:${CLING_BUILD_DIR}/include:${LLVM_DIR}/llvm/include:${LLVM_DIR}/clang/include:${LLVM_BUILD_DIR}/include:${LLVM_BUILD_DIR}/tools/clang/include:$PWD/include"
+        else # repl
+          CPLUS_INCLUDE_PATH="${LLVM_DIR}/llvm/include:${LLVM_DIR}/clang/include:${LLVM_BUILD_DIR}/include:${LLVM_BUILD_DIR}/tools/clang/include:$PWD/include"
+        fi
+
+        export CB_PYTHON_DIR="$PWD/cppyy-backend/python"
+        export CPPINTEROP_DIR="$CB_PYTHON_DIR/cppyy_backend"
+
         # Build CppInterOp next to cling and llvm-project.
-        pwd
         mkdir build && cd build
+        export CPPINTEROP_BUILD_DIR=$PWD
         cling_on="${{ matrix.cling }}"
         if [[ "${cling_on^^}" == "ON" ]]; then
           cmake -DCMAKE_BUILD_TYPE=Release  \
@@ -169,6 +189,8 @@ jobs:
                 -DCling_DIR=$LLVM_BUILD_DIR \
                 -DLLVM_DIR=$LLVM_BUILD_DIR  \
                 -DLLVM_USE_LINKER=lld       \
+                -DBUILD_SHARED_LIBS=ON      \
+                -DCMAKE_INSTALL_PREFIX=$CPPINTEROP_DIR \
                 ../
         else
           cmake -DCMAKE_BUILD_TYPE=Release  \
@@ -176,9 +198,108 @@ jobs:
                 -DUSE_REPL=ON               \
                 -DLLVM_DIR=$LLVM_BUILD_DIR  \
                 -DLLVM_USE_LINKER=lld       \
+                -DBUILD_SHARED_LIBS=ON      \
+                -DCMAKE_INSTALL_PREFIX=$CPPINTEROP_DIR \
                 ../
         fi
         cmake --build . --target check-cppinterop --parallel $(nproc --all)
+        cd ..
+        # We need CB_PYTHON_DIR later
+        echo "CB_PYTHON_DIR=$CB_PYTHON_DIR" >> $GITHUB_ENV
+        # We need CPPINTEROP_DIR, LLVM_BUILD_DIR and CPLUS_INCLUDE_PATH later
+        echo "CPPINTEROP_BUILD_DIR=$CPPINTEROP_BUILD_DIR" >> $GITHUB_ENV
+        echo "CPPINTEROP_DIR=$CPPINTEROP_DIR" >> $GITHUB_ENV
+        echo "LLVM_BUILD_DIR=$LLVM_BUILD_DIR" >> $GITHUB_ENV
+        echo "CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH" >> $GITHUB_ENV
+    - name: Build and Install cppyy-backend on Linux
+      if: runner.os == 'Linux' && ${{ matrix.cppyy }} == 'On'
+      run: |
+        # Download cppyy-backend
+        git clone https://github.com/compiler-research/cppyy-backend.git
+        cd cppyy-backend
+        mkdir -p $CPPINTEROP_DIR/lib build && cd build
+        # Install CppInterOp
+        (cd $CPPINTEROP_BUILD_DIR && cmake --build . --target install --parallel $(nproc --all))
+        # Build and Install cppyy-backend
+        cmake -DInterOp_DIR=$CPPINTEROP_DIR ..
+        cmake --build . --parallel $(nproc --all)
+        cp libcppyy-backend.so $CPPINTEROP_DIR/lib/
+        ##cling_on="${{ matrix.cling }}"
+        ##if [[ "${cling_on^^}" == "ON" ]]; then
+        ##  cp $LLVM_BUILD_DIR/lib/libcling.so $CPPINTEROP_DIR/lib/
+        ##fi
+        #
+        cd ..
+    - name: Install CPyCppyy on Linux
+      if: runner.os == 'Linux' && ${{ matrix.cppyy }} == 'On'
+      run: |
+        # Setup virtual environment
+        python3 -m venv .venv
+        source .venv/bin/activate
+        # Install CPyCppyy
+        git clone https://github.com/compiler-research/CPyCppyy.git
+        cd CPyCppyy
+        mkdir build && cd build
+        cmake ..
+        cmake --build . --parallel $(nproc --all)
+        #
+        export CPYCPPYY_DIR=$PWD
+        cd ../..
+        # We need CPYCPPYY_DIR later
+        echo "CPYCPPYY_DIR=$CPYCPPYY_DIR" >> $GITHUB_ENV
+    - name: Install cppyy on Linux
+      if: runner.os == 'Linux' && ${{ matrix.cppyy }} == 'On'
+      run: |
+        # source virtual environment
+        source .venv/bin/activate
+        # Install cppyy
+        git clone https://github.com/compiler-research/cppyy.git
+        cd cppyy
+        python -m pip install --upgrade . --no-deps
+        cd ..
+    - name: Run cppyy on Linux
+      if: runner.os == 'Linux' && ${{ matrix.cppyy }} == 'On'
+      run: |
+        # Run cppyy
+        source .venv/bin/activate
+        export PYTHONPATH=$PYTHONPATH:$CPYCPPYY_DIR:$CB_PYTHON_DIR
+        python -c "import cppyy"
+        # We need PYTHONPATH later
+        echo "PYTHONPATH=$PYTHONPATH" >> $GITHUB_ENV
+    - name: Run the tests on Linux
+      continue-on-error: true
+      if: runner.os == 'Linux' && ${{ matrix.cppyy }} == 'On'
+      run: |
+        # Run the tests
+        source .venv/bin/activate
+        cd cppyy/test
+        echo ::group::Prepare For Testing
+        make all
+        python -m pip install --upgrade pip
+        python -m pip install pytest
+        python -m pip install pytest-xdist
+        echo ::endgroup::
+        echo ::group::Crashing Test Logs
+        # See if we don't have a crash that went away
+        python -m pytest -n 1 -m "crashes" -sv --max-worker-restart 512 | tee test_crashed.log 2>&1
+        echo ::endgroup::
+        echo ::group::XFAIL Test Logs
+        # See if we don't have an xfail that went away
+        python -m pytest -m "not crashes" --runxfail -s  | tee test_xfailed.log 2>&1
+        echo ::endgroup::
+        echo ::group::Passing Test Logs
+        # Run the rest of the non-crashing tests.
+        declare -i PYTEST_RETCODE=0
+        #python -m pytest -m "not crashes" -v | tee test_passing.log 2>&1
+        valgrind --error-exitcode=1 --suppressions=../etc/valgrind-cppyy-cling.supp python -m pytest -m "not crashes and not xfail" -v
+        export PYTEST_RETCODE=+$?
+        echo ::endgroup::
+        echo "Crashing Summary: \n"
+        tail -n1 test_crashed.log
+        echo "XFAIL Summary:"
+        tail -n1 test_xfailed.log
+        echo "Passing Summary:"
+        tail -n1 test_passing.log
     - name: Show debug info
       if: ${{ failure() }}
       run: |
