Fix cppyy if expressions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -212,7 +212,7 @@ jobs:
         echo "LLVM_BUILD_DIR=$LLVM_BUILD_DIR" >> $GITHUB_ENV
         echo "CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH" >> $GITHUB_ENV
     - name: Build and Install cppyy-backend on Linux
-      if: runner.os == 'Linux' && ${{ matrix.cppyy }} == 'On'
+      if: ${{ (runner.os == 'Linux') && (matrix.cppyy == 'On') }}
       run: |
         # Download cppyy-backend
         git clone https://github.com/compiler-research/cppyy-backend.git
@@ -231,7 +231,7 @@ jobs:
         #
         cd ..
     - name: Install CPyCppyy on Linux
-      if: runner.os == 'Linux' && ${{ matrix.cppyy }} == 'On'
+      if: ${{ (runner.os == 'Linux') && (matrix.cppyy == 'On') }}
       run: |
         # Setup virtual environment
         python3 -m venv .venv
@@ -248,7 +248,7 @@ jobs:
         # We need CPYCPPYY_DIR later
         echo "CPYCPPYY_DIR=$CPYCPPYY_DIR" >> $GITHUB_ENV
     - name: Install cppyy on Linux
-      if: runner.os == 'Linux' && ${{ matrix.cppyy }} == 'On'
+      if: ${{ (runner.os == 'Linux') && (matrix.cppyy == 'On') }}
       run: |
         # source virtual environment
         source .venv/bin/activate
@@ -258,7 +258,7 @@ jobs:
         python -m pip install --upgrade . --no-deps
         cd ..
     - name: Run cppyy on Linux
-      if: runner.os == 'Linux' && ${{ matrix.cppyy }} == 'On'
+      if: ${{ (runner.os == 'Linux') && (matrix.cppyy == 'On') }}
       run: |
         # Run cppyy
         source .venv/bin/activate
@@ -268,7 +268,7 @@ jobs:
         echo "PYTHONPATH=$PYTHONPATH" >> $GITHUB_ENV
     - name: Run the tests on Linux
       continue-on-error: true
-      if: runner.os == 'Linux' && ${{ matrix.cppyy }} == 'On'
+      if: ${{ (runner.os == 'Linux') && (matrix.cppyy == 'On') }}
       run: |
         # Run the tests
         source .venv/bin/activate
